cabal-version:      2.4
name:               hlox
version:            0.1.0.0
synopsis: A Haskell implementation of Lox
bug-reports: https://github.com/calebho/hlox/issues
license: MIT
author:             Caleb Ho
maintainer:         caleb.yh.ho@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

executable hlox
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010
