cabal-version:      2.4
name:               hlox
version:            0.1.0.0
synopsis: A Haskell implementation of Lox
bug-reports: https://github.com/calebho/hlox/issues
license: MIT
author:             Caleb Ho
maintainer:         caleb.yh.ho@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    CHANGELOG.md
    README.md

library
    hs-source-dirs: src
    exposed-modules:
        Hlox.Lex
    build-depends:
        base ^>=4.16.4.0,
        megaparsec ^>=9.3.0,
        text 
    default-language: Haskell2010

executable hlox
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

test-suite test-hlox
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    other-modules:
        Hlox.LexSpec
    build-depends:
        hlox,
        base ^>=4.16.4.0,
        hspec ^>=2.10.9,
        megaparsec ^>=9.3.0,
        file-embed,
        text,
        bytestring
    hs-source-dirs:   test
    default-language: Haskell2010
    build-tool-depends: hspec-discover:hspec-discover
